syntax = "proto3";
import "commontype/ClientInfo.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.retain.rpc.proto";
option java_outer_classname = "RetainServiceProtos";

package retainservice;

service RetainService {
  rpc retain (RetainRequest) returns (RetainReply);
  rpc match (MatchRequest) returns (MatchReply);
}

message RetainRequest {
  uint64 reqId = 1; // message id
  string topic = 2;
  commontype.Message message = 3;
  commontype.ClientInfo publisher = 4;
}

message RetainReply {
  enum Result {
    RETAINED = 0;
    CLEARED = 1;
    ERROR = 2;
  }
  uint64 reqId = 1;
  Result result = 2;
}

message MatchRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string topicFilter = 3;
  uint32 limit = 4;
}

message MatchReply {
  enum Result {
    OK = 0;
    ERROR = 1;
  }
  uint64 reqId = 1;
  Result result = 2;
  repeated commontype.TopicMessage messages = 3;
}